# dragon-tank

./: .python-version  Makefile  README.md  app.py  main.py  old_app.py  pyproject.toml  requirements.txt  setup.py  upload.sh
dragon/: conf.py  tank.py  tank_info.py
dragon/controllers/: __init__.py  controller_abc.py  echo.py  location.py  motion.py  vision.py
dragon/io/: configuration.py  servo.py  sonar.py  wheels.py
dragon/ui/: app.py  dashboard.py
dragon/ui/apps/: about.py  app.py  robot.py  unknown.py
dragon/ui/old_apps/: about.py  robot.py  unknown.py
dragon/ui/old_style/: css_loader.py  palette.py
dragon/ui/style/: palette.py
dragon/ui/templates/: dashboard.html
dragon/ui/web/: __init__.py  routes.py
dragon/ui/web/templates/: dragon-tank.html  layout.html
dragon/ui/web/utils/: altair_plot.py  arm.py
dragon/utils/: math.py
resources/: style.css
scripts/: pyenv-installation.sh  update-env.sh
test/: test_math.py
